--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <img src="./assets/download.png" alt="logo do site" width="30%">
             </div>
-            <div class="hamburger">&#9776;</div>
+            <div class="config">&#9776;</div>
             <ul>
                 <li><a href="#">Premium</a></li>
                 <li><a href="#">Suporte</a></li>
