--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,27 @@
             </ul>
         </div>
     </header>
+<section>
+    <div class="content">
+        <div class="title-content">
+            <h1>Tá acabando: 3 meses de Premium por R$0,00 </h1>
+        </div>
+        <div class="sub-titulo-content">
+            <h4> musicas sem anuncio, modo offline e muito mais. cancele quando quiser.</h4>
+        </div>
+        <div class="btn-content">
+            <button class="btn1">aproveite 3 meses gratis</button>
+            <button class="btn2">ver planos</button>
+        </div>
+        <div class="small-content"> 
+            <P>Somente no plano Individual. Depois, é só R$ 19,90/mês. <a href="#" style="color: #fff;">sujeito a termos e condiçoes </a> Disponível
+                apenas para quem nunca usou o Premium. A oferta termina em 11/09/2022.</P>
+        </div>
+    </div>  
+    <div class="img-spotify">
+        <img src="" alt="image do site">
+    </div>
+</section>
 
 </body>
 
