colocado imagem e configurado conforme a tela muda de tamanho

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>  
     <div class="img-spotify">
-        <img src="" alt="image do site">
+        <img src="./assets/cute-couple-piggypack.jpg" alt="image do site">
     </div>
 </section>
 
