começa da segunda parte do site - parte branca

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,28 @@
     </div>
 </section>
 
+<!--section2-->
+    <div class="section-info">
+        <div class="title-section-info">
+            <h2>Por que ser Premium?</h2>
+        </div>
+
+
+        <div class="images-section-info">
+            <div class="wraper-images">
+                <div class="images-info">
+                    <img src="" alt="">
+
+
+                    <div class="text-section-info">
+                        <span>modo offline</span>
+                        <p>ouça musicas aonde quiser.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
